# crispin

./: .gitignore  CLAUDE.md  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
resources/: crispin-web-mcp.mjs
resources/skills/advisor/: SKILL.md
resources/skills/consensus/: SKILL.md
scripts/: chat-eval-router.mjs
sidecars/engine/: pyproject.toml  run_engine.py  test_run_engine.py
sidecars/tools/: pyproject.toml
sidecars/tools/crispin_tools/: __main__.py  download_worker.py  main.py  rag_store.py
sidecars/tools/crispin_tools/routers/: downloads.py  extract.py  providers.py
sidecars/tools/orion_tools/: __main__.py  jobs.py  main.py
sidecars/tools/orion_tools/routers/: downloads.py  extract.py  rag.py  web.py
src/main/: index.ts
src/main/features/: agent.ts  chat.ts  code.ts  library.ts  mcp.ts  models.ts  pipeline.ts  runtimes.ts  settings.ts  skills.ts
src/main/ipc/: events.test.ts  events.ts  router.ts
src/main/services/: agent-service.ts  app-settings.test.ts  app-settings.ts  embedder-discovery.test.ts  embedder-discovery.ts  engine-client.drain-gate.test.ts  engine-client.rediscover.test.ts  engine-client.ts  engine-config.test.ts  engine-config.ts  engine-eviction.test.ts  engine-eviction.ts  engine-registry-delta.test.ts  engine-registry-delta.ts  git-service.ts  hydrate.test.ts  logger.ts  (+31 more)
src/preload/: index.ts
src/renderer/: index.html
src/shared/: ipc.family.test.ts  ipc.ts  model-tiers.test.ts  model-tiers.ts  modules.ts  types.ts
(+120 files in other folders)
