[project]
name = "crispin-engine"
version = "0.1.0"
description = "Crispin inference sidecar: oMLX OpenAI-compatible multi-model server"
requires-python = ">=3.12"
# [grammar] pulls xgrammar — without it response_format json_schema silently
# degrades to prompt injection (the engine flags that with an RFC-7234 Warning
# header). Constrained decoding is a hard dependency of chat/research
# structured calls; never drop the extra.
dependencies = [
    "omlx[grammar]",
]

# Crispin's own private oMLX fork (off jundot/omlx v0.4.4) — the engine we build
# on and extend. Adds POST /v1/models/discover (runtime model rediscovery) so a
# freshly downloaded model/embedder is served without an engine restart; pinned
# by rev for reproducibility (bump as the fork advances).
[tool.uv.sources]
omlx = { git = "https://github.com/ahmedbegovic/omlx-crispin.git", rev = "fbff02792424aa7e8fe054b8c857bf297bfb40fa" }
